# Oseon-MCP

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CREATE_PR.sh  IMPROVEMENTS.md  LICENSE  Makefile  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  env.example  pyproject.toml  requirements.txt  trumpf_oseon_mcp.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: advanced-usage.md  development.md  launch-tools.md  tools-reference.md
examples/: basic_usage.py  claude_desktop_config.json.template
scripts/: launch_mcp.sh
src/trumpf_oseon_mcp/: __init__.py  __main__.py  config.py  exceptions.py
src/trumpf_oseon_mcp/api/: __init__.py  client.py
src/trumpf_oseon_mcp/models/: __init__.py  schemas.py
src/trumpf_oseon_mcp/tools/: __init__.py  customer_orders.py  dashboards.py  production_orders.py
src/trumpf_oseon_mcp/utils/: __init__.py  filters.py  formatters.py  pagination.py
tests/: __init__.py  test_api.py  test_unified_system.py
tools/: README.md  raycast_mcp.sh
