[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trumpf-oseon-mcp"
version = "2.0.0"
description = "Modular MCP Server for TRUMPF Oseon API - Read-only customer and production order management with pagination"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Luke van Enkhuizen", email = "luke@sheetmetalconnect.com"}
]
maintainers = [
    {name = "Luke van Enkhuizen", email = "luke@sheetmetalconnect.com"}
]
keywords = ["mcp", "trumpf", "oseon", "manufacturing", "api", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/sheetmetalconnect/trumpf-oseon-mcp"
Documentation = "https://github.com/sheetmetalconnect/trumpf-oseon-mcp#readme"
Repository = "https://github.com/sheetmetalconnect/trumpf-oseon-mcp.git"
Issues = "https://github.com/sheetmetalconnect/trumpf-oseon-mcp/issues"
"Sheet Metal Connect" = "https://www.sheetmetalconnect.com/"

[project.scripts]
trumpf-oseon-mcp = "trumpf_oseon_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
]
ignore_missing_imports = true 